[package]
name = "lp-types"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Shared types definition for linear programming"
repository = "https://github.com/oovm/milp-rs"
documentation = "https://docs.rs/lp-types"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
latexify = "0.0.0"
sprs = "0.11.0"
serde = "1.0.158"
serde_derive = "1.0.158"

[dev-dependencies]

[features]
default = []
