[package]
name = "milp"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dependencies.milp-types]
version = "0.0.0"
path = "../milp-types"
features = []


[dev-dependencies]

[features]
default = []
