[package]
name = "milp-types"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Mixed integer linear programming solver"
repository = "https://github.com/oovm/milp-rs"
documentation = "https://docs.rs/milp"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dependencies.milp-types]
version = "0.0.0"
path = "../lp-types"
features = []


[dev-dependencies]

[features]
default = []
